[gd_scene load_steps=18 format=3 uid="uid://1xelpqk8dimq"]

[ext_resource type="Script" path="res://Peterchy.gd" id="1_1v4ti"]
[ext_resource type="Texture2D" uid="uid://bswrev6khkk2b" path="res://assets/GFX/Enemies/Peterchy.png" id="2_427mq"]
[ext_resource type="Texture2D" uid="uid://cp6rjcceam0nl" path="res://assets/GFX/Effects/explosion.png" id="3_wfkt8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rngw6"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg8w2"]
atlas = ExtResource("2_427mq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h844a"]
atlas = ExtResource("2_427mq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0m2u"]
atlas = ExtResource("2_427mq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abrin"]
atlas = ExtResource("2_427mq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odtni"]
atlas = ExtResource("2_427mq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ivsl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg8w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h844a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0m2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abrin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odtni")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qt2l5"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fofvy"]
atlas = ExtResource("3_wfkt8")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmxc3"]
atlas = ExtResource("3_wfkt8")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8skvb"]
atlas = ExtResource("3_wfkt8")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_16n2f"]
atlas = ExtResource("3_wfkt8")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m144f"]
atlas = ExtResource("3_wfkt8")
region = Rect2(96, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hmkl7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fofvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmxc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8skvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16n2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m144f")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[node name="Peterchy" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_1v4ti")
direction = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rngw6")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2ivsl")
frame_progress = 0.363435

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)

[node name="ChangeDirectionTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qt2l5")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_hmkl7")
frame = 4
frame_progress = 1.0

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_top = -38.0
offset_right = 45.0
offset_bottom = -15.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Label2" type="Label" parent="."]
offset_left = 5.0
offset_top = -65.0
offset_right = 45.0
offset_bottom = -42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
